# kano-agent-backlog-skill-demo

./: .gitignore  .gitmodules  ACTIVE_WORK.md  AGENTS.md  CLAUDE.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  conftest.py  index_log.txt  kano-agent-backlog-skill-demo.code-workspace  kano-agent-backlog-skill-demo.opencode-global.bat  kano-agent-backlog-skill-demo.opencode.bat  kano-agent-backlog-skill-demo2.code-workspace  opencode.json  pytest.ini  quickstart.sh  requirements.txt  setup.py  stop.sh  專案狀況總結.md
.github/: copilot-instructions.md
.github/workflows/: docs-deploy.yml
.kano/: backlog_config.toml  backlog_config.toml.example
.kano/debug/: README.md
.obsidian/: workspace.json
.opencode/: oh-my-opencode.json  package-lock.json
.opencode/script/: oc-kano-backlog  oc-kano-backlog-server.sh
.opencode/scripts/: attach-localhost.sh  ensure-kano-opencode-quickstart.sh  kill-port.sh  quickstart.sh  start-server-auth.sh  start-server-local.sh  start-server-tailnet.sh  status.sh  stop.sh
docs/: _config.yml  configuration.md  index.md  installation.md  orphan-commit-detection.md  publish.config.yml  publish.manifest  quick-start.md  submodules_audit.md  usage-examples.md  vllm-embedding-setup.md
kano-backlog-core/: README.md  pyproject.toml
kano-cli/: README.md  pyproject.toml  test_cli_smoke.py
kano-cli/kano_cli/: cli.py  util.py
kano-cli/kano_cli/commands/: item.py  worklog.py
scripts/: prerequisite.ps1  prerequisite.sh  verify_config.py
tests/: __init__.py  test_chunking_mvp.py  test_pipeline_config.py  test_vector_sqlite_backend.py
(+1249 files in other folders)
